Reapply "LPD-49265 portal-search-elasticsearch7-impl: Update classpath, system properties and JVM arguments based on Elasticsearch 8.18"
This reverts commit 711b2ebcff8f9dd9c51f6167e1f15b03525e7f2c.